v1.4 - Pending
	+ Integrate info window into main player
	+ Vertically center currently playing song
	+ Allow screen center for notification popup
	+ Preference for saving lyrics to music file's directory (like artwork)
	+ Allow hiding/reordering notebook tabs (e.g. playlists, streams, info)
	+ Retain library path when re-opening Sonata
	+ Ability to hide progress bar (can create very minimal player)
	+ Skip fallback artwork search of just album name if primary searches fail
	+ Shortcut to search library (ctrl-h)
	+ Use gtk theme's link-color if available (only for gtk 2.12 and above)
	+ Bug: Right-click menu can cause accidental actions with some gtk themes
	+ Bug: Prevent crash on negative disc/track numbers
	+ Bug: Filter + Edit Tags edits a different song than selected
	+ Bug: Prevent possible exception regarding cover art on first load
	+ Bug: Allow MPD_HOST to override GUI
	+ Bug: {} displays in the Current column title
	+ Bug: Fix manpage path to be FHS compliant
	+ Bug: Ensure that the version of ZSI is compatible with sonata

v1.3 - October 29, 2007
	+ Playlist queue support (requires mpd 0.14 - currently mpd-svn)
	+ Use-configurable columns in playlist by using "|" in prefs > format (xsdnyd)
	+ Switch from SOAPpy to newer ZSI library for lyrics fetching
	+ Use xmms-like search filter by default when user types (no more ctrl-j)
	+ Ctrl-i shortcut to center currently playing song
	+ Use case insensitive sorting for library (holy_robot)
	+ Ignore "the" when sorting library in artist/album views (holy_robot)
	+ Better logic when sorting playlists and new "dir+file" sort option (sed)
	+ Allow saving/overwriting existing playlists and streams
	+ Hidden config options to set browser, hide column headers
	+ Update license to GNU GPLv3
	+ Added Brazilian translation (Alex Tercete Matos)
	+ Added Danish translation (Martin Dybdal)
	+ Bug: Fix nl.po translation causing crash
	+ Bug: Remember playlist position when adding from library